0.5.4
- changed Depot detection from name "Depot" to virtual signal "Stop is Depot"
- made input and output blueprintable again, so they store connections in blueprints
- fixed bugs with entity and item prototypes

0.5.3
- added stop_timeout to config parameters

0.5.2
- fixed adding/removing carriages of parked trains does not update composition signals

0.5.1
- train composition output is now binary encoded

0.5.0
- provided items are split evenly among requesters with Best Effort enabled
- added round robin handling, sending a train moves the request to the bottom of order list

0.4.6
- fixed Error when adding LTN to existing game (on_init: __LogisticTrainNetwork__/control.lua:32: attempt to concatenate field '?' (a nil value)")
- fixed order cleanup removed valid order data
- added inactivity timeout to schedule (patch for misbehaving Yuoki Tender Locomotives)

0.4.5
- tweaks to order cleanup
- changed log_output to accept 'console', 'log', 'both'(new default) as parameters

0.4.4
- fixed: circuit/signal error detection sometimes failed
- fixed: changing station name between order creation and schedule generation can produce invalid stations in schedule
- changed lamp error status pink: duplicate station name, no deliveries to/from this station will be created
- added priority signal to provider stations, higher priority is picked as provider first, default priority = 0

0.4.3
- requested/provided items are calculated from parked train inventory instead of delivery size

0.4.2
- improved update of requested/provided items, partial fulfilled requests are correctly updated
- changed log level description

0.4.1
- fixed multiple trains claim the same resources
- fixed creating multiple deliveries to satisfy the same request
- suppressed spam of identical messages
- added use_Best_Effort switch to config

0.4.0
- added merged deliveries
- requests are handled in the order they come up
- fixed possible bug where a too small train would be picked

0.3.12